--- a/DairyManagement/Web.config
+++ b/DairyManagement/Web.config
@@ -53,11 +53,12 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <!--Local connection string-->
-    <!--<add name="DairyManagementEntities" connectionString="metadata=res://*/Models.LocalDBEDMX.DairyManagement.csdl|res://*/Models.LocalDBEDMX.DairyManagement.ssdl|res://*/Models.LocalDBEDMX.DairyManagement.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CIPL-5PC140;initial catalog=DairyManagement;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
-    <!--Live connection string-->
-    <add name="dairymanagementEntities" connectionString="metadata=res://*/Models.LiveDBEDMX.DairyManagementLive.csdl|res://*/Models.LiveDBEDMX.DairyManagementLive.ssdl|res://*/Models.LiveDBEDMX.DairyManagementLive.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=den1.mssql8.gear.host;initial catalog=dairymanagement;persist security info=True;user id=dairymanagement;password=Ly7g~H~IS45G;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DMDBConnectionString" connectionString="Data Source=CIPL-5PC140;Initial Catalog=DMDB;Integrated Security=true;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+
+    <!--<add name="StringDBContext"
+    connectionString="Data Source=CIPL-5PC140;Initial Catalog=DMDB;Integrated Security=true"
+    providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
