--- a/DairyManagement/Web.config
+++ b/DairyManagement/Web.config
@@ -54,7 +54,7 @@
   </runtime>
   <connectionStrings>
 
-    <add name="DMDBConnectionString" connectionString="Data Source=CIPL-5PC140;Initial Catalog=DMDB;Integrated Security=true;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="DMDBConnectionString" connectionString="Data Source=LAPTOP-QNUTREOR;Initial Catalog=DMDB;Integrated Security=true;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
 
     <!--<add name="StringDBContext"
     connectionString="Data Source=CIPL-5PC140;Initial Catalog=DMDB;Integrated Security=true"
